# ori

./: .gitignore  .isort.cfg  .pylintrc  .readthedocs.yml  .requirements.txt  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  lint.sh  pyproject.toml  tox.ini
docsource/: conf.py  index.rst  modules.rst  ori.asyncio.rst  ori.concurrency.rst  ori.errors.rst  ori.poolchain.rst  ori.subprocess.rst
ori/: asyncio.py  concurrency.py  errors.py  poolchain.py  subprocess.py
source/: index.rst  ori.errors.rst  ori.poolchain.rst  ori.rst
tests/: test_asyncio.py  test_concurrency.py  test_poolchain.py  test_subprocess.py
