[tool.poetry]
name = "ori"
version = "0.1.0"
description = "Concurrency tools for Python."
authors = ["James Mishra <james.mishra@neocrym.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
