[tool.poetry]
name = "ori"
version = "0.1.2"
description = "Concurrency tools for Python."
authors = ["James Mishra <james.mishra@neocrym.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"
sphinx = "^3.1.2"
isort = "<5"
tox = "^3.17.1"
sphinx-autodoc-typehints = "^1.11.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
